GH-15 add permissions to autofill clean up tab complete by using switch statements and making cases modular with additional methods